Game: introduce players

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -1,3 +1,5 @@
-title_app=Blurry Picture Guessing Game
+title_app=Blurred
 action_choose_picture=Choose picture
-descr_picture_file=Picture
+descr_picture_file=Picture file
+descr_player1=Player1
+descr_player2=Player2
