Game: animate blurry picture

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -1,5 +1,6 @@
 title_app=Blurred
 action_choose_picture=Choose picture
+action_reveal_picture=Reveal picture
 descr_picture_file=Picture file
 descr_player1=Player1
 descr_player2=Player2
