Game master: introduce basic player1 panel

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -3,5 +3,9 @@ action_choose_picture=Choose picture
 action_reveal_picture=Reveal picture
 action_present=Present
 descr_picture_file=Picture file
-descr_player1=Player1
-descr_player2=Player2
+title_player1=Player1
+title_player2=Player2
+title_name=Name
+title_score=Score
+title_picture=Picture
+action_reveal=Reveal
