Settings: user-adjustable blurriness

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -10,3 +10,6 @@ title_score=Score
 title_picture=Picture
 action_reveal=Reveal
 action_start=Start
+title_timer=Timer
+title_minimum_blur=Blur (minimum)
+title_maximum_blur=Blur (maximum)
