Game: pause progress

--- a/src/main/resources/Messages_de.properties
+++ b/src/main/resources/Messages_de.properties
@@ -10,6 +10,7 @@ title_score=Punkte
 title_picture=Bild
 action_reveal=Aufloesen
 action_start=Start
+action_pause=Pause
 title_unblur_duration=Entschaerfedauer
 title_minimum_blur=Unschärfe (minimum)
 title_maximum_blur=Unschärfe (maximum)
