--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -10,6 +10,7 @@ title_score=Score
 title_picture=Picture
 action_reveal=Reveal
 action_start=Start
+action_pause=Pause
 title_unblur_duration=Unblur duration
 title_minimum_blur=Blur (minimum)
 title_maximum_blur=Blur (maximum)
