Game: stop via buzzer

--- a/src/main/resources/Messages_de.properties
+++ b/src/main/resources/Messages_de.properties
@@ -14,3 +14,4 @@ action_pause=Pause
 title_unblur_duration=Entschaerfedauer
 title_minimum_blur=Unschärfe (minimum)
 title_maximum_blur=Unschärfe (maximum)
+title_buzzer=Buzzer
