--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -14,3 +14,4 @@ action_pause=Pause
 title_unblur_duration=Unblur duration
 title_minimum_blur=Blur (minimum)
 title_maximum_blur=Blur (maximum)
+title_buzzer=Buzzer
