Game: allow loading multiple pictures

--- a/src/main/resources/Messages_de.properties
+++ b/src/main/resources/Messages_de.properties
@@ -1,8 +1,8 @@
 title_app=Unscharf
-action_choose_picture=Bild oeffnen
+action_choose_pictures=Bilder oeffnen
 action_reveal_picture=Bild aufloesen
 action_present=Praesentieren
-descr_picture_file=Bilddatei
+descr_picture_files=Bilddateien
 title_player1=Spieler1
 title_player2=Spieler2
 title_name=Name
@@ -12,6 +12,6 @@ action_reveal=Aufloesen
 action_start=Start
 action_pause=Pause
 title_unblur_duration=Entschaerfedauer
-title_minimum_blur=Unschärfe (minimum)
-title_maximum_blur=Unschärfe (maximum)
+title_minimum_blur=Unschaerfe (minimum)
+title_maximum_blur=Unschaerfe (maximum)
 title_buzzer=Buzzer
