--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -1,8 +1,8 @@
 title_app=Blurred
-action_choose_picture=Choose picture
+action_choose_pictures=Choose pictures
 action_reveal_picture=Reveal picture
 action_present=Present
-descr_picture_file=Picture file
+descr_picture_files=Picture files
 title_player1=Player1
 title_player2=Player2
 title_name=Name
