Sounds: toggleable intro and background music

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -15,3 +15,5 @@ title_unblur_duration=Unblur duration
 title_minimum_blur=Blur (minimum)
 title_maximum_blur=Blur (maximum)
 title_buzzer=Buzzer
+title_music_intro=Intro
+title_music_background=Music bed
