--- a/src/main/resources/Messages_de.properties
+++ b/src/main/resources/Messages_de.properties
@@ -15,3 +15,5 @@ title_unblur_duration=Entschaerfedauer
 title_minimum_blur=Unschaerfe (minimum)
 title_maximum_blur=Unschaerfe (maximum)
 title_buzzer=Buzzer
+title_music_intro=Intro
+title_music_background=Musikbett
